Add black background to HTML body

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,16 @@
     -->
     <title>React App</title>
   </head>
+
+  <style>
+    body {
+      margin-top: 0px;
+      margin-right: 0px;
+      margin-bottom: 0px;
+      margin-left: 0px;
+    }
+  </style>
+
   <body>
     <div id="root"></div>
     <!--
